# client-server

./: README.md
Client/: CMakeLists.txt
Client/src/: LazyPirateClient.cpp  LazyPirateClient.h  main.cpp
Server/: server.py  sortingalgs.py
Tools/: inputGenerator.py  outputChecker.py
